<resources>
    <string name="app_name">eNight</string>
    <string name="logo_night_shop">logo night shop</string>
    <string name="string_placeholder_email">Enter your Email</string>
    <string name="button_connexion">Connexion</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="matricule">Matricule : </string>
    <string name="nom">Nom : </string>
    <string name="prenom">Prenom : </string>
    <string name="about_me">About Me</string>
    <string name="quote_format">\"%s\"</string>
    <string name="fragment_login_label">Login</string>
    <string name="fragment_about_me_label">About Me</string>
    <string name="profile_fragment_label">Profile</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="fragment_rules_label">Rules</string>
    <string name="email_label">Email :</string>
    <string name="nom_label">Nom :</string>
    <string name="prenom_label">Prenom :</string>
    <string name="ajouter_label_button">Ajouter</string>
    <string name="_5">5</string>
    <string name="alg3">ALG3</string>
    <string name="cour">Cour</string>
    <string name="nombre_de_credit">Nombre de Credit</string>
    <string name="ajouter_un_cour_au_cursus">Ajouter un Cour au Cursus</string>
    <string name="clear">Clear</string>
    <string name="ajouter">Ajouter</string>
    <string name="go_to_shop">Go to Shop</string>
    <string name="Label_fragment_cour">Mes Cours</string>
    <string name="mes_cours">Mes Cours </string>
    <string name="rules">Rules</string>
    <string name="profile">Profile</string>
    <string name="Food_Trucks_List_label">Food Trucks List</string>
    <string name="pas_encore_trouv">Pas encore trouvé</string>
    <string name="valid">Validé</string>
    <string name="close">Close</string>
    <string name="courDetail_label">Détail du Cour</string>
    <string name="log_out">Log out</string>
    <string name="rule_about_app"> Hi, This is e-night App.
\n\n Course Part.
\n\n This part help student to manager their courses during an school year.
\n Your can add all courses you got for the year and your can have a look of all of them
\n When you click on one of them your can see the details like how many ETCS is it and if you already success that course

\n\n Profile part.
\n\n In this part you can manage all users of the app on your gsm.
\n You can also set any profile by adding or change a first name and last name of an user
\nand you can have a look of all users which has already used you app.

        \n\nFood Truck Part.
        \n\n If your are in brussels town and looking for something to eat
        \n you can use this part of app that has a list of all food truck in brussels
        \n but unfortunately is not finish.
        \n hopefully, i will be focus on this part after i passed all my exam.
        \n\n
        \n\nHope this app will be helpful to you, Thank u </string>
</resources>