<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".view.cour.CourFragment">

    <data>
        <variable
            name="CourViewModel"
            type="com.example.enight.view.cour.CourViewModel" />
    </data>

    <androidx.drawerlayout.widget.DrawerLayout
        android:id="@+id/drawerLayout"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">


        <LinearLayout
            android:id="@+id/linearLayout"
            android:layout_width="313dp"
            android:layout_height="30dp"
            android:background="#2196F3"
            android:orientation="horizontal"
            app:layout_constraintBottom_toTopOf="@+id/recyclerView_cour"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/linearLayout_button">

            <TextView
                android:id="@+id/id_title_mes_cours"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="5"
                android:text="@string/mes_cours"
                android:textAlignment="center"
                android:textSize="18sp" />

        </LinearLayout>

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/recyclerView_cour"
            android:layout_width="290dp"
            android:layout_height="111dp"
            android:layout_marginBottom="10dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/linearLayout" />

        <LinearLayout
            android:id="@+id/linearLayout_button"
            android:layout_width="343dp"
            android:layout_height="53dp"
            android:orientation="horizontal"
            app:layout_constraintBottom_toTopOf="@+id/linearLayout"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/constraintLayout_formulaire">

            <Button
                android:id="@+id/id_button_clear"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:onClick="@{() -> CourViewModel.clear()}"
                android:text="@string/clear"
                tools:ignore="ButtonStyle" />

            <Button
                android:id="@+id/id_button_ajouter_cour"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:onClick="@{() -> CourViewModel.addCourse()}"
                android:text="@string/ajouter"
                tools:ignore="ButtonStyle" />

            <Button
                android:id="@+id/id_button_GotToShop"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:onClick="@{() -> CourViewModel.isGoToShopClicked()}"
                android:text="@string/go_to_shop"
                tools:ignore="ButtonStyle" />

        </LinearLayout>

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/constraintLayout_formulaire"
            android:layout_width="304dp"
            android:layout_height="107dp"
            android:layout_marginTop="10dp"
            android:background="#D1E6F6"
            app:layout_constraintBottom_toTopOf="@+id/linearLayout_button"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <TextView
                android:id="@+id/id_label_titre_formulaireAjout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="#2196F3"
                android:text="@string/ajouter_un_cour_au_cursus"
                android:textAlignment="center"
                android:textSize="18sp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_bias="0.134" />

            <TextView
                android:id="@+id/label_input_nbCredit"
                android:layout_width="134dp"
                android:layout_height="20dp"
                android:layout_marginTop="8dp"
                android:text="@string/nombre_de_credit"
                android:textAlignment="center"
                app:layout_constraintBottom_toTopOf="@+id/edit_input_nbCredit"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintStart_toEndOf="@+id/label_input_cour_name"
                app:layout_constraintTop_toBottomOf="@+id/id_label_titre_formulaireAjout" />

            <TextView
                android:id="@+id/label_input_cour_name"
                android:layout_width="134dp"
                android:layout_height="20dp"
                android:layout_marginTop="8dp"
                android:text="@string/cour"
                android:textAlignment="center"
                app:layout_constraintBottom_toTopOf="@+id/edit_input_Cour_name"
                app:layout_constraintEnd_toStartOf="@+id/label_input_nbCredit"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/id_label_titre_formulaireAjout" />


            <AutoCompleteTextView
                android:id="@+id/edit_input_Cour_name"
                android:layout_width="68dp"
                android:layout_height="wrap_content"
                android:hint="@string/alg3"
                android:imeOptions="actionDone"
                android:importantForAutofill="no"
                android:inputType="text"
                android:text="@={CourViewModel.editCourName}"
                android:textAlignment="center"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toStartOf="@+id/edit_input_nbCredit"
                app:layout_constraintHorizontal_bias="0.433"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/label_input_cour_name"
                tools:ignore="LabelFor" />

            <EditText
                android:id="@+id/edit_input_nbCredit"
                android:layout_width="68dp"
                android:layout_height="wrap_content"
                android:hint="@string/_5"
                android:imeOptions="actionDone"
                android:importantForAutofill="no"
                android:inputType="text"
                android:text="@={CourViewModel.editNbCredit}"
                android:textAlignment="center"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.754"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/label_input_nbCredit"
                tools:ignore="LabelFor" />


        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.constraintlayout.widget.ConstraintLayout>
        <com.google.android.material.navigation.NavigationView
            android:id="@+id/navView"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_gravity="start"
            app:menu="@menu/navdrawer_menu"/>

    </androidx.drawerlayout.widget.DrawerLayout>

</layout>