<?xml version="1.0" encoding="utf-8"?>

<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="com.example.enight.view.login.LoginFragment">

    <data>
        <variable
            name="LoginViewModel"
            type="com.example.enight.view.login.LoginViewModel" />
    </data>


    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/loginFragment"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:tag="layout/fragment_login">

        <ImageView
            android:id="@+id/logo_night_shop"
            android:layout_width="392dp"
            android:layout_height="194dp"
            android:contentDescription="@string/logo_night_shop"
            android:rotation="-13"
            android:rotationX="32"
            android:rotationY="23"
            app:layout_constraintBottom_toTopOf="@+id/edit_email"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.473"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@drawable/night_shop_logo2" />

        <Button
            android:id="@+id/button_connexion"
            android:layout_width="158dp"
            android:layout_height="44dp"
            android:layout_marginBottom="16dp"
            android:contentDescription="@string/button_connexion"
            android:text="@string/button_connexion"
            android:onClick="@{() -> LoginViewModel.onConnexion()}"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/edit_email" />

        <AutoCompleteTextView
            android:id="@+id/edit_email"
            android:layout_width="237dp"
            android:layout_height="41dp"
            android:layout_marginBottom="16dp"
            android:ems="12"
            android:hint="@string/string_placeholder_email"
            android:imeOptions="actionDone"
            android:inputType="textEmailAddress"
            android:textAlignment="center"
            android:text="@={LoginViewModel.emailText}"
            app:layout_constraintBottom_toTopOf="@+id/button_connexion"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/logo_night_shop" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>
